--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,30 @@
-<app-joke></app-joke>
+<body>
+<p>Joke:</p>
+<table>
+    <tbody>
+        <tr>
+            <td><img src="assets/norris.jpg" alt="Chuck Norris"></td>
+            <td><app-joke></app-joke></td>
+        </tr>
+    </tbody>
+</table>
+<p>Weather:</p>
+<app-weather></app-weather>
+<table>
+    <tbody>
+    <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    </tr>
+    </tbody>
+    </table>
+
+    <app-todolist></app-todolist>
+
+</body>
