--- a/src/app/components/joke/joke.component.html
+++ b/src/app/components/joke/joke.component.html
@@ -1,3 +1,3 @@
 <!--<p *ngIf="joke">{{joke.value}}</p>-->
-
+<h1><img src="assets/norris.png" alt="Chuck Norris" width="125px" height="125px">Joke:</h1>
 <p >{{(joke$ | async)?.value}}</p>
